# clover-s-tools

./: .gitignore  README.md
Figma2WBP/: .gitignore
Figma2WBP/figma2ui/: UMG_WIDGET_REFERENCE.md  figma2ui.py  slim_json.py
Figma2WBP/wbp2figma/: README.md  UMG_TO_FIGMA_REFERENCE.md  figma_writer.js.template  font_map.json  geometry.py  wbp2figma.py
Figma2WBP/wbp2figma/psd2figma/: PSD_TO_FIGMA_REFERENCE.md  README.md  parse_psd.py  psd2figma.py
Figma2WBP/wbp2figma/psd2figma/tests/: test_psd2figma.py
Figma2WBP/wbp2figma/tests/: mock_wbp.json  test_wbp2figma.py
Figma2WBP/wbp2figma/ue/: README_UE.md  export_wbp.py
Figma2WBP/wbp2figma/ue/cpp/: ExportTextureUtil.cpp  ExportTextureUtil.h
cutimg/: README.md  index.html  package-lock.json  package.json
cutimg/electron/: main.js  preload.js  start.js
cutimg/src/: App.vue  style.css  tauriAPI.js
cutimg/src-tauri/: Cargo.toml  tauri.conf.json
cutimg/src-tauri/capabilities/: default.json
cutimg/src-tauri/icons/: icon.icns
cutimg/src-tauri/src/: lib.rs
figma-3dtool/: README.md  code.js  manifest.json  ui.html
fitguard/: FitGuard.html  README.md  index.html  script.js  style.CSS
reicon/: CLAUDE.md  app.py  requirements.txt
renametools/: README.md  README_分发版本.txt  build_exe.bat  image_renamer.py  setup.bat  setup.sh  start.bat  start.sh  使用说明.txt  分发指南.txt  图片重命名工具.spec
